# agent-rules-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish-pypi.yml
docs/: ACTIONS-PINNING-POLICY.md  BUILD-PLAN.md  DEPENDABOT-DEPENDENCY-GRAPH.md  EXIT-CODES.md  EXTERNAL-AUDIT-PACKAGE-CURRENT-MAIN.md  OPENSSF-SCORECARD-EVALUATION.md  OUTPUTS.md  POST-AUDIT-ACTION-PLAN-CURRENT-MAIN.md  POST-V0.3.0-FUNCTIONAL-CONTRACT-EVIDENCE.md  POST-V0.3.0-INTERNAL-READINESS-AUDIT.md  PRE-V0.4.0-INTERNAL-READINESS-AUDIT.md  PRIVATE-VULNERABILITY-REPORTING.md  PRODUCT-STRATEGY.md  RULES.md  SECURITY-SUPPLY-CHAIN-EVALUATION.md  THREAT-MODEL.md  V0.2-GOVERNANCE-BOUNDARIES.md  V0.2-GOVERNANCE-RULES-SPEC.md  V0.2-PACKAGING-DRY-RUN.md  V0.2-RELEASE-READINESS.md  V0.2.0-RELEASE-NOTES-DRAFT.md  V0.2.0-RELEASE-NOTES.md  V0.3-ARCHITECTURE-ROADMAP.md  V0.3.0-POST-RELEASE-AUDIT.md  V0.3.0-RELEASE-NOTES-DRAFT.md  V0.3.0-RELEASE-NOTES.md  V0.4.0-RELEASE-EVIDENCE.md  V0.4.0-RELEASE-NOTES.md
scripts/: check.sh  post-release-audit.sh
src/agent_rules_kit/: __init__.py  budget.py  cli.py  conflicts.py  dedupe.py  discovery.py  explain.py  findings.py  governance.py  init_plan.py  init_write.py  redaction.py
tests/: test_cli.py  test_conflicts.py  test_dedupe.py  test_diagnostic_fixtures.py  test_discovery.py  test_findings.py  test_golden_outputs.py  test_governance.py  test_init_plan.py  test_init_write.py  test_path_boundaries.py  test_redaction.py
tests/fixtures/repositories/claude-dotdir/.claude/: CLAUDE.md
tests/fixtures/repositories/missing-authority-scope/: AGENTS.md
tests/fixtures/repositories/missing-secret-boundary/: AGENTS.md
tests/fixtures/repositories/risky-instructions/: AGENTS.md
tests/fixtures/repositories/runtime-network-llm/: AGENTS.md
tests/fixtures/repositories/single-agent/: AGENTS.md
tests/fixtures/repositories/unsafe-command-execution/: AGENTS.md
tests/fixtures/repositories/unsupported-claim/: AGENTS.md
