[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-rules-kit"
version = "0.2.2"
description = "Local read-only CLI to diagnose AGENTS.md, Claude Code, Gemini CLI, Cursor and Copilot instruction files."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "CoderDeltaLAN" }]
keywords = ["ai-agents", "agent-instructions", "agents-md", "cli", "developer-tools", "python", "linting", "code-quality", "repository-diagnostics", "github-copilot", "cursor", "claude-code", "gemini-cli", "read-only", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.8,<1",
]

[project.urls]
Repository = "https://github.com/CoderDeltaLAN/agent-rules-kit"
Issues = "https://github.com/CoderDeltaLAN/agent-rules-kit/issues"
Changelog = "https://github.com/CoderDeltaLAN/agent-rules-kit/blob/main/CHANGELOG.md"
Security = "https://github.com/CoderDeltaLAN/agent-rules-kit/security/policy"
Release = "https://github.com/CoderDeltaLAN/agent-rules-kit/releases/tag/v0.2.2"

[project.scripts]
agent-rules-kit = "agent_rules_kit.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
